<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#E6F1EC"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/website_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_uri"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:inputType="textEmailAddress"/>
    <Button
        android:id="@+id/website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_uri"
        android:layout_gravity="center"
        android:background="#F6DE05"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:onClick="openwebsite"/>

    <EditText
        android:id="@+id/location_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_loc"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"/>
    <Button
        android:id="@+id/location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_loc"
        android:layout_gravity="center"
        android:background="#F6DE05"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:onClick="openlocation"/>
    <EditText
        android:id="@+id/share_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:text="@string/edittext_share"/>
    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_share"
        android:layout_gravity="center"
        android:background="#F6DE05"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:onClick="sharetext"/>
    <Button
        android:id="@+id/photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_picture"
        android:layout_gravity="center"
        android:background="#F6DE05"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="200dp"
        android:onClick="takePhoto"/>


</LinearLayout>